# lab

./: CMakeLists.txt  Doxyfile  README.md  main.c
html/: README_8md.html  files.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8c.html  md_README.html  pages.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  defines_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
latex/: index.tex  main_8c.tex  md_README.tex  refman.tex
rtf/: refman.rtf
